falta por img tarefa e botao qr

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -34,11 +34,11 @@
 
 
         <div class="ion-padding">
-          <!-- <ion-button [routerLink]="[ '/tabs/tab1' ]" expand="block" type="submit" class="ion-no-margin">Entrar
-          </ion-button> -->
-
-          <ion-button expand="block" type="submit" class="ion-no-margin">Entrar
+          <ion-button [routerLink]="[ '/tabs/tab1' ]" expand="block" type="submit" class="ion-no-margin">Entrar
           </ion-button>
+
+          <!-- <ion-button expand="block" type="submit" class="ion-no-margin">Entrar
+          </ion-button> -->
         </div>
       </ion-list>
     </form>
