--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -34,7 +34,7 @@
 
 
         <div class="ion-padding">
-          <ion-button [routerLink]="[ '/tabs/tab1' ]" expand="block" type="submit" class="ion-no-margin">Entrar
+          <ion-button [routerLink]="[ '/tabs/tab1' ]" expand="block"   class="ion-no-margin">Entrar
           </ion-button>
 
           <!-- <ion-button expand="block" type="submit" class="ion-no-margin">Entrar
