--- a/src/app/tab2-form-tarefa/tab2-form-tarefa.page.html
+++ b/src/app/tab2-form-tarefa/tab2-form-tarefa.page.html
@@ -27,8 +27,11 @@
       </ion-item>
 
       <ion-item>
-        <ion-input type="imagem" formControlName="imagem" ></ion-input>
-        <ion-thumbnail>
+        <ion-label position="stacked">Imagem</ion-label>
+        <ion-icon slot="start" style="font-size: 50px" name="star" (click)="selectImageInCamera()"></ion-icon>
+        <ion-input type="image" formControlName="imagem" value="{{imagembase64}}"></ion-input>
+
+        <ion-thumbnail *ngIf="imagembase64">
           <ion-img [src]="imagembase64" ></ion-img>
         </ion-thumbnail>
       </ion-item>
