--- a/src/app/tab2-tarefa/tab2-tarefa.page.html
+++ b/src/app/tab2-tarefa/tab2-tarefa.page.html
@@ -56,6 +56,15 @@
                 <ion-icon name="trash"></ion-icon>
               </ion-button>
             </ion-col>
+            <ion-col size="5">
+                <ion-item>
+                    <ion-label position="stacked">Imagem</ion-label>
+
+                    <ion-thumbnail>
+                      <ion-img [src]="entities.imagem" ></ion-img>
+                    </ion-thumbnail>
+                  </ion-item>
+            </ion-col>
           </ion-row>
 
         </ion-grid>
