--- a/src/app/tab2-tarefa/tab2-tarefa.page.html
+++ b/src/app/tab2-tarefa/tab2-tarefa.page.html
@@ -56,7 +56,7 @@
                 <ion-icon name="trash"></ion-icon>
               </ion-button>
             </ion-col>
-            <ion-col size="5">
+            <ion-col size="5" *ngIf="entities.imagem">
                 <ion-item>
                     <ion-label position="stacked">Imagem</ion-label>
 
@@ -81,8 +81,4 @@
   <ng-template #elseTemplate>
 
   </ng-template>
-
-
-
-
 </ion-content>
