--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -38,13 +38,13 @@
     <ion-row class="ion-justify-content-center">
 
       <ion-col>
-        <ion-button shape="round" fill="solid" (click)="openModalSolicitationCreat()">
-          Abrir Solicitações
+        <ion-button size="small" shape="round" fill="solid" (click)="openModalSolicitationCreat()">
+          Abrir Solic.
         </ion-button>
       </ion-col>
       <ion-col>
-        <ion-button shape="round" fill="solid" (click)="openSolicitations()">
-          Listar Solicitações
+        <ion-button size="small" shape="round" fill="solid" (click)="openSolicitations()">
+          Listar Solic.
         </ion-button>
       </ion-col>
 
