--- a/src/app/tab2-details/tab2-details.page.html
+++ b/src/app/tab2-details/tab2-details.page.html
@@ -41,7 +41,7 @@
               <ion-label>Data</ion-label>
             </ion-col>
             <ion-col size="8">
-              <p class="custom"> {{ entities.data }}</p>
+              <p class="custom"> {{ entities.data | date:('d/MMM/y')}}</p>
             </ion-col>
           </ion-row>
 
@@ -78,7 +78,7 @@
               <ion-label>Data Prog</ion-label>
             </ion-col>
             <ion-col size="8">
-              <p class="custom"> {{ entities.data_prog }}</p>
+              <p class="custom"> {{ entities.data_prog  }}</p>
             </ion-col>
           </ion-row>
 
@@ -87,7 +87,7 @@
               <ion-label>Data Solic</ion-label>
             </ion-col>
             <ion-col size="8">
-              <p class="custom"> {{ entities.data_solic }}</p>
+               <p class="custom"> {{ entities.data_solic}}</p> <!-- date:('d/MM/y, h:mm:ss a') -->
             </ion-col>
           </ion-row>
 
