--- a/src/app/tab-solicitacao/tab-solicitacao.page.html
+++ b/src/app/tab-solicitacao/tab-solicitacao.page.html
@@ -24,7 +24,7 @@
 
     <ion-col size="10">
       <div class="container">
-        <ion-searchbar [(ngModel)]="userFilter.ordem_servico" animated placeholder="Pesquisar Solicitações">
+        <ion-searchbar [(ngModel)]="userFilter.id" animated placeholder="Pesquisar Solicitações">
         </ion-searchbar>
       </div>
     </ion-col>
@@ -53,23 +53,23 @@
             </ion-col>
           </ion-row>
 
-          <ion-row>
+          <!-- <ion-row>
             <ion-col size="4">
               <ion-label>Filial</ion-label>
             </ion-col>
             <ion-col size="8">
               <P class="custom"> {{ entities.id_filial }}</P>
             </ion-col>
-          </ion-row>
+          </ion-row> -->
 
-          <ion-row>
+          <!-- <ion-row>
             <ion-col size="4">
               <ion-label>Ordem</ion-label>
             </ion-col>
             <ion-col size="8">
               <p class="custom"> {{ entities.ordem_servico }}</p>
             </ion-col>
-          </ion-row>
+          </ion-row> -->
 
           <ion-row>
             <ion-col size="4">
