--- a/src/app/tab2-form-img/tab2-form-img.page.html
+++ b/src/app/tab2-form-img/tab2-form-img.page.html
@@ -1,9 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>{{title}}</ion-title>
-    <ion-button (click)="selectImageInCamera()" fill="solid" shape="round">
-      Tirar Foto
-    </ion-button>
+    
   </ion-toolbar>
 </ion-header>
 
@@ -15,23 +13,19 @@
       <ion-item>
         <ion-label position="stacked">Obs</ion-label>
         <ion-input type="text" formControlName="obs" id="obs"></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-label position="stacked">Url Img</ion-label>
-        <ion-input readonly formControlName="url" id="url"></ion-input>
-        <ion-input type="text" [value]="myPhotoURL | async" formControlName="url" id="url"></ion-input>
-      </ion-item>
-
+      </ion-item> 
+        <ion-input hidden type="text" readonly=true formControlName="url" value="{{imagem}}" id="url"></ion-input>
     </ion-list>
-    <ion-card>
-
-      <ion-img style="height: 200px; width: 200px" *ngIf="foto" [src]="foto"> </ion-img>
-
-    </ion-card>
+     
     <div class="ion-padding">
       <ion-button expand="block" (click)="send()" class="ion-no-margin">Salvar</ion-button>
     </div>
 
   </form>
+
+  <ion-card class="ion-text-center"><ion-label> <ion-icon  style="font-size: 50px" name="camera" (click)="selectImageInCamera()"></ion-icon></ion-label> 
+    <ion-card-subtitle *ngIf="imagem" class="ion-padding"> Imagem:  </ion-card-subtitle>
+     <ion-img class="ion-padding" [src]="imagem" id="imagem"></ion-img>
+  </ion-card>
 
 </ion-content>
