--- a/src/app/tab2-form-tarefa/tab2-form-tarefa.page.html
+++ b/src/app/tab2-form-tarefa/tab2-form-tarefa.page.html
@@ -26,10 +26,8 @@
         <ion-input type="text" formControlName="status" id="status"></ion-input>
       </ion-item>
 
-      <ion-item>
-        <ion-input type="text" readonly=true formControlName="imagem" value="{{imagem}}" id="imagem"></ion-input>
-      </ion-item>
-
+         <ion-input hidden type="text" readonly=true formControlName="imagem" value="{{imagem}}" id="imagem"></ion-input>
+ 
     </ion-list>
     <div class="ion-padding">
       <ion-button expand="block" (click)="send()" class="ion-no-margin">Salvar</ion-button>
